--- a/wp-content/themes/ktelecom/fonts.css
+++ b/wp-content/themes/ktelecom/fonts.css
@@ -2,7 +2,13 @@
     font-family: "CeraRoundPro";
     src: url("./assets/fonts/CeraRoundPro-Medium.otf") format(opentype);
     font-style : normal;  
-    font-weight : normal;
+    font-weight : 500;
+   }
+@font-face {
+    font-family: "CeraRoundPro";
+    src: url("./assets/fonts/CeraRoundPro-Regular.otf") format(opentype);
+    font-style : normal;  
+    font-weight : 400;
    }
 @font-face {
     font-family: "CeraRoundPro";
@@ -12,7 +18,7 @@
    }
 @font-face {
     font-family: "OpenSans";
-    src: url("./assets/fonts/OpenSans-Medium.woff") format(woff);
+    src: url("./assets/fonts/OpenSans-Regular.woff") format(woff);
     font-style : normal;  
    }
 
@@ -34,4 +40,9 @@ p, span, a, li{
    font-size: 16px; 
    line-height: 200%;
    letter-spacing: 1px;
+}
+
+.slider h2{
+    font-size: 28px;
+    font-weight: 500;
 }
