--- a/wp-content/themes/ktelecom/assets/owlcarousel/assets/owl.carousel.css
+++ b/wp-content/themes/ktelecom/assets/owlcarousel/assets/owl.carousel.css
@@ -28,7 +28,7 @@
     height: 0; }
   .owl-carousel .owl-stage-outer {
     position: relative;
-    overflow: hidden;
+    /*overflow: hidden;*/
     /* fix for flashing background */
     -webkit-transform: translate3d(0px, 0px, 0px); }
   .owl-carousel .owl-wrapper,
