--- a/wp-content/themes/ktelecom/style.css
+++ b/wp-content/themes/ktelecom/style.css
@@ -74,6 +74,10 @@ button.select {
     gap: 20px;
 }
 
+.title-text{
+    width: 430px;
+}
+
 .img-block {
     display: flex;
     align-items: center;
